# utils

./: .clang-format  .gitmodules  CMakeLists.txt
include/: utils.hpp
src/: utils.cpp
